testsuite/tests/properties/invalid_new_node/list_synth/test.lkt
from common import EmptyNode, FooNode, Literal

@synthetic class LiteralList: ASTList[Literal] {
    @memoized fun prop(): LiteralList = LiteralList()
}
